--- a/MusicEscape/manifest.json
+++ b/MusicEscape/manifest.json
@@ -3,9 +3,12 @@
   "id": "MusicEscape",
   "name": "MusicEscape",
   "author": "Zingabopp",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "description": "Intended to make mod testing easier. Press Escape to exit a song.",
-  "gameVersion": "1.11.1",
+  "gameVersion": "1.12.1",
+  "dependsOn": {
+    "BSIPA": "^4.1.2"
+  },
   "links": {
     "project-source": "https://github.com/Zingabopp/MusicEscape"
   },
